# vk_python_internship

./: .dockerignore  .gitignore  Dockerfile  config.py  db.py  docker-compose.yaml  main.py  pyproject.toml
controllers/: user_controller.py
models/: user_model.py
repositories/: user_repository.py
schemas/: user_schemas.py
security/: security.py
services/: user_service.py
tests/e2e/: conftest.py  test_get_user.py  test_user_creation.py  test_user_free.py  test_user_lock.py
tests/units/: test_security.py
