[project]
name = "vk-botfarm"
version = "0.1.0"
description = "vk internship microservice - botfarm/"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=43.0.0",
    "alembic>=1.13.0",
    "email-validator>=2.0.0"
]
